# IndicScriptureQA-RL

./: Dockerfile  README.md  environment.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements-server.txt  rewards.py  tasks.py
server/: app.py
